--- a/PAIRS.properties
+++ b/PAIRS.properties
@@ -4,8 +4,8 @@
 # Define the market we are trading (BTC, ETH, XMR, BNB or USDT)
 market = USDT
 # This will enable trading for any pairs that you have defined
-enabled_pairs = ALL
-#enabled_pairs = BTC, ETH, LTC, BCH, XRP, TRX, EOS, ADA
+#enabled_pairs = ALL
+enabled_pairs = BTC, ETH, XRP, BCH, LTC, ADA, BNB, EOS, BSV, TRX, DOT, LINK, XMR
 # Enable trading (buying,selling and orders) using defined strategies for all pairs
 DEFAULT_trading_enabled = true
 # This will hide any pairs that you have disabled
@@ -48,9 +48,9 @@ DEFAULT_rebuy_timeout = 1
 # Note: You may need to adjust this to suit market conditions, setting this to 0.01 will only pick positive pairs.
 DEFAULT_buy_min_change_percentage = -20
 # Only purchase a pair if the 24 hour percentage change is below the max price increase.
-DEFAULT_buy_max_change_percentage = 0
+DEFAULT_buy_max_change_percentage = 30
 # coin_min_age is defined in days, it is used to allow the bot to trade only with coins which are older than x days,
-pair_min_listed_days = 365
+pair_min_listed_days = 30
 # Set the percentage of price slippage allowed when ProfitTrailer is looking to buy a coin.
 DEFAULT_min_orderbook_price_slippage_percentage = 0.5
 # If set to True, trailing will reset (stop trailing) if your strategies are not TRUE anymore and ready to buy.
@@ -106,7 +106,7 @@ DEFAULT_trailing_buy = 0.01
 # What is the minimum profit we want to make on this trade?
 #
 DEFAULT_A_sell_strategy = GAIN
-DEFAULT_A_sell_value = 1.2
+DEFAULT_A_sell_value = 3
 #
 # Have we confirmed we are at the top of the Trade Cycle?
 #
@@ -115,9 +115,10 @@ DEFAULT_B_sell_value = 80
 #
 # Trailing should take us to the peak of the trade cycle
 #
-DEFAULT_trailing_profit = 0.25
+#DEFAULT_trailing_profit = 0.25
+DEFAULT_trailing_profit = 1.25
 # Set the number of times you want to see the price fluctuate into and out of a good trail before making the buy.
-DEFAULT_trailing_profit_rebound_count = 0
+DEFAULT_trailing_profit_rebound_count = 5
 # Pairs on temporary ban
 #
 # Profits
@@ -178,14 +179,18 @@ consecutive_sell_trigger = 2
 # This is to protect against Bitcoin rising (aka mooning) or dropping automatically turns on / off SOM as required.
 price_trigger_market = USDT
 
-# price rise trigger action STOPLOSS  2020/09/07
-#price_rise_trigger_action = STOPLOSS
+# price rise trigger action SOM  2020/09/07
+price_rise_trigger_action = SOM
+# Turn on sell only mode if the price rises by the set percentage.
 price_rise_trigger = 7
+# Turn off sell only mode if it was activated by price rise and the price change is now back below the set threshold.
 price_rise_recover_trigger = 6
 
-#price drop trigger action STOPLOSS 2020/09/07
-#price_drop_trigger_action = STOPLOSS
+#price drop trigger action SOM 2020/09/07
+price_drop_trigger_action = SOM
+# Turn on sell only mode (SOM) if the price drops by the set percentage.
 price_drop_trigger = 12
+# Turn off sell only mode if it was activated by a price drop the price change is now back above the set threshold.
 price_drop_recover_trigger = 5
 
 #
@@ -209,7 +214,11 @@ BNBDOWN_trading_enable = false
 # Pairs delisted from the exchanges
 #
 
+#margin
+#DEFAULT_buy_leverage = 125
+#DEFAULT_buy_margin_type = CROSSED
 
+#CROSSED or ISOLATED
 #
 #
 
