--- a/DCA.properties
+++ b/DCA.properties
@@ -1,3 +1,4 @@
+
 #
 # GENERAL SETTINGS
 #
@@ -5,7 +6,6 @@
 DEFAULT_DCA_max_cost = 30000
 # Define max amount of times DCA is allowed to buy a pair.
 DEFAULT_DCA_max_buy_times = 4
-
 #
 # Set the maximum number of coins that are permitted to DCA at any given time.
 # If not set (including missing from the file completely) then there is no limit and all coins can be DCA'd.
@@ -69,16 +69,18 @@ DEFAULT_DCA_B_buy_value_limit = -10
 # Have we confirmed we are at the bottom of the Trade Cycle?
 #
 DEFAULT_DCA_C_buy_strategy = RSI
-DEFAULT_DCA_C_buy_value = 50
+DEFAULT_DCA_C_buy_value = 20
 DEFAULT_DCA_C_buy_value_limit = 1
 
+
 DEFAULT_DCA_D_buy_strategy = PROFITPERCENTAGE
-DEFAULT_DCA_D_buy_value = -3
-#DEFAULT_DCA_D_buy_value_1 = -3
-#DEFAULT_DCA_D_buy_value_2 = -3
-#DEFAULT_DCA_D_buy_value_3 = -3
-#DEFAULT_DCA_D_buy_value_4 = -3
-#DEFAULT_DCA_D_buy_value_5 = -20
+#DEFAULT_DCA_D_buy_value = -3
+DEFAULT_DCA_D_buy_value_1 = -3
+DEFAULT_DCA_D_buy_value_2 = -4
+DEFAULT_DCA_D_buy_value_3 = -5
+DEFAULT_DCA_D_buy_value_4 = -6
+#DEFAULT_DCA_D_buy_value_5 = -5
+
 #
 # Once all buy strategies are true, the bot will make note of the current ask
 # the percentage specified in order for a buy to be attempted. It will try
@@ -88,12 +90,12 @@ DEFAULT_DCA_trailing_buy = 0.01
 DEFAULT_DCA_trailing_buy_rebound_count = 0
 # Set the percentage of TCV purchased when making a DCA buy.
 DEFAULT_DCA_buy_percentage = 100
+
 # Set the buy percentage to be used instead of DEFAULT_DCA_buy_percentage when sell only mode (SOM) is on
 SOM_DCA_buy_percentage = 100
 # Set the loss percentage required before a DCA buy can take place.
+#   (9/4)
 #DEFAULT_DCA_buy_trigger = -3
-#DEFAULT_DCA_buy_trigger_1 = -6
-#DEFAULT_DCA_buy_trigger_2 = -9
 # Set the loss % required before a DCA buy can take place when SOM is on.
 # All configured buy strategies must be true and you must have lost at least this amount from your average bought price.
 #         2020/9/4
@@ -226,8 +228,8 @@ DEFAULT_DCA_B_sell_value = 80
 #
 # Trailing should take us to the peak of the trade cycle
 #
-DEFAULT_DCA_trailing_profit = 1.25
-DEFAULT_DCA_trailing_profit_rebound_count = 5
+DEFAULT_DCA_trailing_profit = 0.75
+DEFAULT_DCA_trailing_profit_rebound_count = 3
 
 #
 # Profits
@@ -281,9 +283,3 @@ DEFAULT_DCA_trailing_stop_loss_trigger = 2
 DCA_stop_before_complete = true
 # Set to true to sell all of your coins in the DCA Log IMMEDIATELY for current market prices.
 DEFAULT_DCA_panic_sell_enabled = false
-
-
-#margin
-#DEFAULT_DCA_buy_leverage = 125
-#DEFAULT_DCA_buy_margin_type = CROSSED
-#CROSSED or ISOLATED
