--- a/PAIRS.properties
+++ b/PAIRS.properties
@@ -5,11 +5,11 @@
 market = USDT
 # This will enable trading for any pairs that you have defined
 #enabled_pairs = ALL
-enabled_pairs = BTC, ETH, XRP, BCH, LTC, ADA, BNB, EOS, BSV, TRX, DOT, LINK, XMR
+enabled_pairs = BTC, ETH, XRP, BCH, LTC, ADA, BNB, EOS, BSV, TRX, DOT, LINK, XMR, XLM, XTZ, XEM, NEO, LEO
 # Enable trading (buying,selling and orders) using defined strategies for all pairs
 DEFAULT_trading_enabled = true
 # This will hide any pairs that you have disabled
-hidden_pairs = BNB
+#hidden_pairs =
 # DCA is a method for averaging down the price of a losing trade, hoping the price will come up to your lower average buy price.
 DEFAULT_DCA_enabled = -1.5
 # Choose to combine pending orders for the same coin into one item in the pending log or keep them as separate items.
@@ -44,13 +44,13 @@ DEFAULT_max_buy_spread = 3
 # Allow initial buys if there is enough volume in order book to fill the order.
 DEFAULT_min_orderbook_volume_percentage = 100
 # Set the amount of minutes that the bot is not allowed to buy a coin after it was sold.
-DEFAULT_rebuy_timeout = 1
+DEFAULT_rebuy_timeout = 0
 # Note: You may need to adjust this to suit market conditions, setting this to 0.01 will only pick positive pairs.
 DEFAULT_buy_min_change_percentage = -20
 # Only purchase a pair if the 24 hour percentage change is below the max price increase.
-DEFAULT_buy_max_change_percentage = 30
+DEFAULT_buy_max_change_percentage = 0
 # coin_min_age is defined in days, it is used to allow the bot to trade only with coins which are older than x days,
-pair_min_listed_days = 30
+pair_min_listed_days = 0
 # Set the percentage of price slippage allowed when ProfitTrailer is looking to buy a coin.
 DEFAULT_min_orderbook_price_slippage_percentage = 0.5
 # If set to True, trailing will reset (stop trailing) if your strategies are not TRUE anymore and ready to buy.
@@ -83,7 +83,7 @@ DEFAULT_B_buy_value_limit = -30
 # Have we confirmed we are at the bottom of the Trade Cycle?
 #
 DEFAULT_C_buy_strategy = RSI
-DEFAULT_C_buy_value = 50
+DEFAULT_C_buy_value = 30
 DEFAULT_C_buy_value_limit = 1
 #
 # Once all buy strategies are true, the bot will make note of the current ask
@@ -115,10 +115,9 @@ DEFAULT_B_sell_value = 80
 #
 # Trailing should take us to the peak of the trade cycle
 #
-#DEFAULT_trailing_profit = 0.25
-DEFAULT_trailing_profit = 1.25
+DEFAULT_trailing_profit = 0.75
 # Set the number of times you want to see the price fluctuate into and out of a good trail before making the buy.
-DEFAULT_trailing_profit_rebound_count = 5
+DEFAULT_trailing_profit_rebound_count = 3
 # Pairs on temporary ban
 #
 # Profits
@@ -179,18 +178,14 @@ consecutive_sell_trigger = 2
 # This is to protect against Bitcoin rising (aka mooning) or dropping automatically turns on / off SOM as required.
 price_trigger_market = USDT
 
-# price rise trigger action SOM  2020/09/07
-price_rise_trigger_action = SOM
-# Turn on sell only mode if the price rises by the set percentage.
+# price rise trigger action STOPLOSS  2020/09/07
+#price_rise_trigger_action = STOPLOSS
 price_rise_trigger = 7
-# Turn off sell only mode if it was activated by price rise and the price change is now back below the set threshold.
 price_rise_recover_trigger = 6
 
-#price drop trigger action SOM 2020/09/07
-price_drop_trigger_action = SOM
-# Turn on sell only mode (SOM) if the price drops by the set percentage.
+#price drop trigger action STOPLOSS 2020/09/07
+#price_drop_trigger_action = STOPLOSS
 price_drop_trigger = 12
-# Turn off sell only mode if it was activated by a price drop the price change is now back above the set threshold.
 price_drop_recover_trigger = 5
 
 #
@@ -200,7 +195,7 @@ price_drop_recover_trigger = 5
 # This is for the pairs you do not wish to trade, examples only below,
 # you need to add your own list here. Make sure none of your enabled pairs
 # above is appearing below or that pair wont trade.
-BNB_trading_enabled = false
+#BNB_trading_enabled = false
 BNB_reserve_amount = 0
 BTCDOWN_trading_enabled = false
 COMP_trading_enabled = false
@@ -214,11 +209,7 @@ BNBDOWN_trading_enable = false
 # Pairs delisted from the exchanges
 #
 
-#margin
-#DEFAULT_buy_leverage = 125
-#DEFAULT_buy_margin_type = CROSSED
 
-#CROSSED or ISOLATED
 #
 #
 
