--- a/DCA.properties
+++ b/DCA.properties
@@ -1,11 +1,10 @@
-
 #
 # GENERAL SETTINGS
 #
 # DCA is a method for averaging down the price of a losing trade, hoping the price will come up to your lower average buy price.
 DEFAULT_DCA_max_cost = 30000
 # Define max amount of times DCA is allowed to buy a pair.
-DEFAULT_DCA_max_buy_times = 4
+DEFAULT_DCA_max_buy_times = 3
 #
 # Set the maximum number of coins that are permitted to DCA at any given time.
 # If not set (including missing from the file completely) then there is no limit and all coins can be DCA'd.
@@ -69,16 +68,16 @@ DEFAULT_DCA_B_buy_value_limit = -10
 # Have we confirmed we are at the bottom of the Trade Cycle?
 #
 DEFAULT_DCA_C_buy_strategy = RSI
-DEFAULT_DCA_C_buy_value = 50
+DEFAULT_DCA_C_buy_value = 20
 DEFAULT_DCA_C_buy_value_limit = 1
 
 
 DEFAULT_DCA_D_buy_strategy = PROFITPERCENTAGE
-DEFAULT_DCA_D_buy_value = -3
-#DEFAULT_DCA_D_buy_value_1 = -3
-#DEFAULT_DCA_D_buy_value_2 = -4
-#DEFAULT_DCA_D_buy_value_3 = -4
-#DEFAULT_DCA_D_buy_value_4 = -5
+#DEFAULT_DCA_D_buy_value = -3
+DEFAULT_DCA_D_buy_value_1 = -3
+DEFAULT_DCA_D_buy_value_2 = -4
+DEFAULT_DCA_D_buy_value_3 = -5
+DEFAULT_DCA_D_buy_value_4 = -6
 #DEFAULT_DCA_D_buy_value_5 = -5
 
 #
@@ -219,7 +218,7 @@ DEFAULT_DCA_buy_percentage_100 = 1
 # What is the minimum profit we want to make on this trade?
 #
 DEFAULT_DCA_A_sell_strategy = GAIN
-DEFAULT_DCA_A_sell_value = 1
+DEFAULT_DCA_A_sell_value = 3
 #
 # Have we confirmed we are at the top of the Trade Cycle?
 #
