--- a/PAIRS.properties
+++ b/PAIRS.properties
@@ -4,12 +4,12 @@
 # Define the market we are trading (BTC, ETH, XMR, BNB or USDT)
 market = USDT
 # This will enable trading for any pairs that you have defined
-enabled_pairs = ALL
-#enabled_pairs = BTC, ETH, LTC, BCH, XRP, TRX, EOS, ADA
+#enabled_pairs = ALL
+enabled_pairs = BTC, ETH, XRP, BCH, LTC, ADA, BNB, EOS, BSV, TRX, DOT, LINK, XMR, XLM, XTZ, XEM, NEO, LEO
 # Enable trading (buying,selling and orders) using defined strategies for all pairs
 DEFAULT_trading_enabled = true
 # This will hide any pairs that you have disabled
-hidden_pairs = BNB
+#hidden_pairs =
 # DCA is a method for averaging down the price of a losing trade, hoping the price will come up to your lower average buy price.
 DEFAULT_DCA_enabled = -1.5
 # Choose to combine pending orders for the same coin into one item in the pending log or keep them as separate items.
@@ -35,7 +35,7 @@ max_trading_pairs = 7
 # Set the amount of the market currency (BTC, ETH, XMR, BNB, or USDT) we will use to buy a pair. This amount is spent for EACH initial purchase.
 DEFAULT_initial_cost = 0
 # An alternative to the fixed initial cost above, set the percentage of your TCV (Total Current Value) to be used for each initial purchase.
-DEFAULT_initial_cost_percentage = 2
+DEFAULT_initial_cost_percentage = 2.5
 # Only buy coins with a minimum volume of specified amount.
 DEFAULT_min_buy_volume = 0
 DEFAULT_min_buy_price = 10
@@ -44,13 +44,13 @@ DEFAULT_max_buy_spread = 3
 # Allow initial buys if there is enough volume in order book to fill the order.
 DEFAULT_min_orderbook_volume_percentage = 100
 # Set the amount of minutes that the bot is not allowed to buy a coin after it was sold.
-DEFAULT_rebuy_timeout = 1
+DEFAULT_rebuy_timeout = 0
 # Note: You may need to adjust this to suit market conditions, setting this to 0.01 will only pick positive pairs.
 DEFAULT_buy_min_change_percentage = -20
 # Only purchase a pair if the 24 hour percentage change is below the max price increase.
 DEFAULT_buy_max_change_percentage = 0
 # coin_min_age is defined in days, it is used to allow the bot to trade only with coins which are older than x days,
-pair_min_listed_days = 365
+pair_min_listed_days = 0
 # Set the percentage of price slippage allowed when ProfitTrailer is looking to buy a coin.
 DEFAULT_min_orderbook_price_slippage_percentage = 0.5
 # If set to True, trailing will reset (stop trailing) if your strategies are not TRUE anymore and ready to buy.
@@ -83,7 +83,7 @@ DEFAULT_B_buy_value_limit = -30
 # Have we confirmed we are at the bottom of the Trade Cycle?
 #
 DEFAULT_C_buy_strategy = RSI
-DEFAULT_C_buy_value = 50
+DEFAULT_C_buy_value = 20
 DEFAULT_C_buy_value_limit = 1
 #
 # Once all buy strategies are true, the bot will make note of the current ask
@@ -106,7 +106,7 @@ DEFAULT_trailing_buy = 0.01
 # What is the minimum profit we want to make on this trade?
 #
 DEFAULT_A_sell_strategy = GAIN
-DEFAULT_A_sell_value = 1.2
+DEFAULT_A_sell_value = 3
 #
 # Have we confirmed we are at the top of the Trade Cycle?
 #
@@ -195,7 +195,7 @@ price_drop_recover_trigger = 5
 # This is for the pairs you do not wish to trade, examples only below,
 # you need to add your own list here. Make sure none of your enabled pairs
 # above is appearing below or that pair wont trade.
-BNB_trading_enabled = false
+#BNB_trading_enabled = false
 BNB_reserve_amount = 0
 BTCDOWN_trading_enabled = false
 COMP_trading_enabled = false
